--- a/cursor/comparing-cursor-vs-qodo.mdx
+++ b/cursor/comparing-cursor-vs-qodo.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of Cursor and Qodo Gen, exploring their fe
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Cursor and Qodo Gen stand out as two prominent solutions in the market. Both tools offer sophisticated AI-powered coding assistance, but while Cursor builds upon the familiar VS Code experience, Qodo Gen takes a more platform-agnostic approach with broader IDE integration. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered development tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [Qodo Gen](https://www.qodo.ai/) stand out as two prominent solutions in the market. Both offer sophisticated AI code generation, but while Cursor builds upon the familiar VS Code experience, Qodo Gen takes a more platform-agnostic approach with broader IDE integration. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['JetBrains Support', '✗', '✓'],
    ['NVIM Support', '✗', '✗'],
    ['Models Supported', 'GPT-4, Claude, Custom', 'GPT-4, Claude 3.5, Gemini'],
-   ['Pricing', 'Free tier + Pro $20/mo', 'From $10/month individual']
+   ['Pricing', 'Free Hobby Tier + Pro $20/mo + Business $40/user/mo', 'Free Developer tier + Teams $19/user/mo + Enterprise custom price']
 ]
 
 ## Code Completion
@@ -43,7 +45,7 @@ Qodo Gen's smart code completion system provides AI-driven suggestions across al
 ## AI Chat Capabilities
 
 ### Cursor
-Cursor features a deeply integrated AI chat system that maintains context awareness of your code. It supports multiple AI models, offers code block generation with instant apply functionality, and preserves chat history. The system includes web search capabilities for up-to-date information and allows for customizable chat interface settings.
+Cursor features a deeply integrated AI chat system that maintains context awareness of your code. It supports multiple AI models, offers code block generation with instant apply functionality, and preserves chat history. The system also includes web search capabilities for up-to-date information, and allows for customizable chat interface settings.
 
 ### Qodo Gen
 Qodo Gen's AI chat integration, known as Qodo Chat, provides real-time assistance within the development environment. It specializes in offering coding-specific insights, including documentation help, debugging assistance, and task planning through its Coding-Agent feature. The chat system is particularly strong in handling pull request reviews and providing actionable insights.
@@ -67,33 +69,44 @@ Qodo Gen implements strong encryption for all transmitted code snippets and prov
 ## Pricing
 
 ### Cursor
-- **Hobby (Free)**
-  - 14-day Pro trial
-  - 50 slow premium model uses
-  - 200 cursor-small uses
-  - 2,000 completions
-- **Pro ($20/month)**
-  - 500 fast premium model uses monthly
-  - Unlimited slow premium model uses
-  - Unlimited cursor-small uses
+- **Hobby**
+  - Free for individual users
+  - Pro two week trial
+  - 2000 completions
+  - 50 slow premium requests
+- **Pro**
+  - $20 per month
   - Unlimited completions
-  - 10 Claude Opus uses monthly
-- **Business (Custom pricing)**
-  - All Pro features
-  - Team management features
-  - Advanced administration tools
+  - 500 fast premium requests
+  - Unlimited slow premium requests
+  - 10 o1-mini uses per day
+ - **Business**
+  - $40 per user, per month
+  - Enforce privacy mode org-wide
+  - Centralized team billing
+  - Admin dashboard with usage stats
+  - SAML/OIDC SSO
 
 ### Qodo Gen
-- **Free Tier**
+- **Developer Tier**
+  - Free
   - Access to basic features
   - Suitable for individual developers
-- **Pro Tier (Price not specified in documentation)**
-  - Enhanced functionality
-  - AI-assisted code completion
-  - Targeted towards teams and enterprises
+  - Basic IDE integration
+- **Teams Tier**
+  - $19 per user, per month
+  - Enhanced AI-assisted code completion
+  - Pre-pull request review inside the IDE
+  - Standard support
+- **Enterprise Tier**
+  - Custom pricing
+  - Self-hosted solution
+  - Full organization codebase awareness
+  - Enterprise SSO
+  - Priority support
 
 ## Conclusion
 
 Cursor and Qodo Gen each offer compelling features for AI-assisted development, but they cater to slightly different needs. Cursor excels as a VS Code-based solution with deep AI integration, making it an excellent choice for developers who prefer a familiar coding environment with enhanced AI capabilities. Its pricing structure is transparent, and it offers robust features even in its free tier.
 
-Qodo Gen, on the other hand, stands out with its broader IDE support and specialized features like test generation and pull request reviews. It's particularly well-suited for team environments and those working across multiple development platforms. While its pricing structure is less transparent, its language-agnostic approach and comprehensive feature set make it a strong contender, especially for enterprise development teams requiring broader tool integration.
+Qodo Gen, on the other hand, stands out with its broader IDE support and specialized features like test generation and pull request reviews. It's particularly well-suited for team environments and those working across multiple development platforms. Its language-agnostic approach and comprehensive feature set make it a strong contender, especially for enterprise development teams requiring broader tool integration.
