--- a/cursor/comparing-cursor-vs-replit.mdx
+++ b/cursor/comparing-cursor-vs-replit.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Comprehensive comparison of Cursor and Replit, exploring their
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Cursor and Replit stand out as two prominent solutions in the market. Both tools offer sophisticated AI-powered coding assistance, but while Cursor focuses on enhancing the traditional VS Code experience with AI capabilities, Replit provides a complete cloud-based development environment. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [Replit](https://replit.com/) stand out as two prominent solutions in the market. Both offer sophisticated AI-powered coding assistance, but while Cursor focuses on enhancing the traditional VS Code experience with AI capabilities, Replit provides a complete cloud-based development environment. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['JetBrains Support', '✗', 'N/A'],
    ['NVIM Support', '✗', 'N/A'],
    ['Models Supported', 'GPT-4, Claude, Custom', 'Claude 3.5, GPT-4o'],
-   ['Pricing', 'Free tier + Pro $20/mo, 'Free, Core $15/mo']
+   ['Pricing', 'Free Hobby Tier + Pro $20/mo + Business $40/user/mo', 'Free tier + Core $15/mo']
 ]
 
 ## Code Completion
@@ -67,28 +69,32 @@ The documentation doesn't provide detailed information about Replit's privacy me
 ## Pricing
 
 ### Cursor
-- **Hobby (Free)**
-  - 14-day Pro trial
-  - 50 slow premium model uses
-  - 200 cursor-small uses
-  - 2,000 completions
+- **Hobby**
+  - Free for individual users
+  - Pro two week trial
+  - 2000 completions
+  - 50 slow premium requests
 - **Pro**
-  - 500 fast premium model uses/month
-  - Unlimited slow premium model uses
-  - Unlimited cursor-small uses
+  - $20 per month
   - Unlimited completions
-  - 10 Claude Opus uses/month
-- **Business**
-  - All Pro features
-  - Team management features
-  - Advanced administration tools
+  - 500 fast premium requests
+  - Unlimited slow premium requests
+  - 10 o1-mini uses per day
+ - **Business**
+  - $40 per user, per month
+  - Enforce privacy mode org-wide
+  - Centralized team billing
+  - Admin dashboard with usage stats
+  - SAML/OIDC SSO
 
-### Replit
+### Replit AI
 - **Free Plan**
+  - Free for individuals
   - Access to basic AI features
   - Standard code completion
   - Basic AI assistance
-- **Replit Core (Premium)**
+- **Replit Core**
+  - $15 per month
   - Exclusive access to advanced AI models
   - Enhanced AI features
   - More powerful code generation capabilities
