--- a/cursor/comparing-cursor-vs-tabnine.mdx
+++ b/cursor/comparing-cursor-vs-tabnine.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of Cursor and Tabnine AI code editors, fea
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Cursor and Tabnine stand out as two prominent solutions in the market. Both tools offer sophisticated code completion and AI assistance, but Cursor takes a more comprehensive approach as a full-featured code editor while Tabnine focuses on being a versatile completion tool that integrates with existing IDEs. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [Tabnine](https://www.tabnine.com/) stand out as two prominent solutions in the market. Both offer sophisticated AI code completion and assistance, but Cursor takes a more comprehensive approach as a full-featured code editor, while Tabnine focuses on being a versatile completion tool that integrates with existing IDEs. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,9 +31,8 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['JetBrains Support', '✗', '✓'],
    ['NVIM Support', '✗', '✓'],
    ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
-   ['Pricing', 'Free tier + Pro $20/mo', 'Free tier + Enterprise $39/mo']
+   ['Pricing', 'Free Hobby Tier + Pro $20/mo + Business $40/user/mo', 'Dev $9/mo + Enterprise $30/user/mo']
 ]
-
 
 ## Code Completion
 
@@ -44,7 +45,7 @@ Tabnine focuses on providing whole-line suggestions and full-function implementa
 ## AI Chat Capabilities
 
 ### Cursor
-Cursor integrates a sophisticated AI chat system directly into the editor, offering context-aware code discussions, multiple AI model support, and instant code block generation with apply functionality. The chat system preserves history and automatically includes relevant file context, with added web search capabilities for up-to-date information.
+Cursor integrates a sophisticated AI chat system directly into the editor, offering context-aware code discussions, multiple AI model support, and instant code block generation with apply functionality. The chat system preserves history, and automatically includes relevant file context, with added web search capabilities for up-to-date information.
 
 ### Tabnine
 Tabnine Chat provides interactive AI coding assistance with code-aware conversations directly within the IDE. It includes code review capabilities and documentation assistance, though it's more focused on immediate code-related queries rather than broader development discussions.
@@ -63,43 +64,44 @@ Tabnine emphasizes personalization through learning from your coding patterns an
 Cursor implements an optional Privacy Mode to prevent code storage, with no permanent storage of plaintext code. It offers local processing of sensitive information, transparent data handling policies, and configurable codebase indexing.
 
 ### Tabnine
-Tabnine maintains strict security standards with end-to-end encryption and no code sharing with third parties. It offers local processing options and private installation capabilities for enterprises, along with strict data handling protocols and secure code generation.
+Tabnine maintains strict security standards with end-to-end encryption, and no code sharing with third parties. It offers local processing options and private installation capabilities for enterprises, along with strict data handling protocols and secure code generation.
 
 ## Pricing
 
 ### Cursor
-- **Hobby (Free)**
-  - 14-day Pro trial
-  - 50 slow premium model uses
-  - 200 cursor-small uses
-  - 2,000 completions
-- **Pro ($20/month)**
-  - 500 fast premium model uses
-  - Unlimited slow premium model uses
+- **Hobby**
+  - Free for individual users
+  - Pro two week trial
+  - 2000 completions
+  - 50 slow premium requests
+- **Pro**
+  - $20 per month
   - Unlimited completions
-  - 10 Claude Opus uses
-- **Business** (Custom pricing)
-  - All Pro features
-  - Team management
-  - Advanced administration tools
+  - 500 fast premium requests
+  - Unlimited slow premium requests
+  - 10 o1-mini uses per day
+ - **Business**
+  - $40 per user, per month
+  - Enforce privacy mode org-wide
+  - Centralized team billing
+  - Admin dashboard with usage stats
+  - SAML/OIDC SSO
 
 ### Tabnine
-- **Basic (Free)**
-  - Essential features
-  - Public code completion
-- **Dev** (Price not provided)
-  - Enhanced features
-  - Personal AI assistance
-- **Pro** (Price not provided)
-  - Advanced customization
-  - Priority support
-- **Enterprise** (Custom pricing)
-  - SaaS or Private Installation options
-  - Full security control
-  - Team collaboration features
+- **Dev Plan**
+  - $9 per month
+  - AI agents personalized to your coding standards
+  - Integration with Atlassian Jira
+  - Enterprise-grade security, safety, and privacy
+- **Enterprise Plans**
+  - $39 per user, per month
+  - SaaS and Private Installation options
+  - Full control over infrastructure
+  - Maximum security features
+
 
 ## Conclusion
 
 Cursor and Tabnine represent different approaches to AI-powered development assistance. Cursor offers a more comprehensive solution as a full-featured code editor with deep AI integration, making it ideal for developers who want a complete IDE replacement with powerful AI capabilities. Its pricing structure is more transparent, and it offers access to leading language models like GPT-4 and Claude.
 
-Tabnine, on the other hand, excels as a versatile code completion tool that integrates with existing development environments. Its strength lies in its adaptability to different IDEs and its focus on learning from your coding patterns. While its pricing is less transparent, it offers more deployment options, including self-hosting, making it particularly attractive for enterprise environments with strict security requirements.
+Tabnine, on the other hand, excels as a versatile code completion tool that integrates with existing development environments. Its strength lies in its adaptability to different IDEs and its focus on learning from your coding patterns. It also offers more deployment options, including self-hosting, making it particularly attractive for enterprise environments with strict security requirements.
