Update comparing-cody-vs-qodo.mdx (#15)
* Update comparing-cody-vs-qodo.mdx

Edits for readability, pricing, keywords, features and links

* Update comparing-cody-vs-qodo.mdx (#16)

--- a/cody/comparing-cody-vs-qodo.mdx
+++ b/cody/comparing-cody-vs-qodo.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Comprehensive comparison of Sourcegraph Cody and Qodo Gen, inc
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Sourcegraph Cody and Qodo Gen stand out as two prominent solutions in the market. Both tools offer comprehensive AI-assisted development capabilities, but differ significantly in their approach to test generation and context handling. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/) and [Qodo Gen](https://www.qodo.ai/) stand out as two prominent solutions in the market. Both tools offer comprehensive AI-assisted code completion, but differ significantly in their approach to test generation and context handling. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,13 +31,13 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✗', '✗'],
     ['Models Supported', 'GPT-4, Claude, Custom', 'Universal, Fine-tuned Models'],
-    ['Pricing', 'Free tier + Pro $9/mo', 'Free tier + Multiple plans']
+    ['Pricing', 'Free tier + Pro $9/mo + Enterprise $19/user/mo', 'Free tier + Teams $19/user/mo + Enterprise custom pricing']
 ]
 
 ## Code Completion
 
 ### Sourcegraph Cody
-Sourcegraph Cody offers intelligent code completion with context-aware suggestions based on your entire codebase. It maintains consistent coding patterns while reducing common errors through its advanced understanding of code relationships and repository analysis. The system provides both single-line and full-function completions, with customizable context window sizes for optimal performance.
+Sourcegraph Cody offers intelligent code completion with context-aware suggestions based on your entire codebase. It maintains consistent coding patterns, while reducing common errors through its advanced understanding of code relationships and repository analysis. The system provides both single-line and full-function completions, with customizable context window sizes for optimal performance.
 
 ### Qodo Gen
 Qodo Gen provides smart code completion with real-time suggestions across all major programming languages. Its AI-driven system focuses on accuracy and speed, offering intelligent code snippets that adapt to your coding style. The tool is particularly strong in completing both code and configuration files, making it versatile for various development tasks.
@@ -51,46 +53,61 @@ Qodo Gen's chat interface focuses on providing real-time coding assistance throu
 ## Context Awareness
 
 ### Sourcegraph Cody
-Sourcegraph Cody excels in context awareness with its multiple context retrieval methods. It offers configurable context window sizes and token limit optimization, allowing developers to balance between response quality and performance. The enterprise tier provides enhanced context capabilities including remote file access and OpenCtx integration.
+Sourcegraph Cody excels in context awareness, with multiple context retrieval methods. It offers configurable context window sizes and token limit optimization, allowing developers to balance between response quality and performance. The enterprise tier also provides enhanced context capabilities including remote file access and OpenCtx integration.
 
 ### Qodo Gen
-Qodo Gen's context awareness focuses on current file analysis and git diff understanding. It maintains context across different programming languages and integrates with various development platforms. The system particularly shines in pull request reviews, where it uses contextual understanding to provide meaningful insights and improvements.
+Qodo Gen's context awareness focuses on current file analysis and git diff understanding. It maintains context across different programming languages, and integrates with various development platforms. The system particularly shines in pull request reviews, where it uses contextual understanding to provide meaningful insights and improvements.
 
 ## Privacy and Security
 
 ### Sourcegraph Cody
-While specific privacy details aren't extensively documented, Sourcegraph Cody provides enterprise-grade security features, including enhanced security controls for business environments. The enterprise tier offers team-specific security measures and organizational control over repository access.
+While specific privacy details aren't extensively documented, Sourcegraph Cody provides enterprise-grade security features, including enhanced security controls for business environments. Meanwhile, the enterprise tier offers team-specific security measures and organizational control over repository access.
 
 ### Qodo Gen
-Qodo Gen implements strong privacy measures, including encryption for all transmitted code snippets and opt-out options for data sharing. The system provides transparent privacy policies and terms of use, making it suitable for security-conscious organizations.
+Qodo Gen implements strong privacy measures, including encryption for all transmitted code snippets and opt-out options for data sharing. The system also provides transparent privacy policies and terms of use, making it suitable for security-conscious organizations.
 
 ## Pricing
 
 ### Sourcegraph Cody
-- **Free/Pro Tier**
+- **Free Tier**
+  - Free for individual users
   - Single repository access
   - Basic IDE integration
   - Essential code completion
-  - Standard chat functionality
+- **Pro Tier**
+  - $9 per month
+  - Unlimited chat and commands
+  - More powerful LLMs for chat
+  - Support with limited SLAs
 - **Enterprise Tier**
+  - $19 per user, per month
   - Multi-repository support
   - Enhanced features across all IDEs
   - Team collaboration capabilities
-  - Advanced context features
-  - Custom integration options
+  - Custom deployment options
 
 ### Qodo Gen
-- **Free Tier**
+- **Developer Tier**
+  - Free for individual use
   - Access to basic features
   - Suitable for individual developers
   - Basic IDE integration
-- **Pro Tier**
+- **Teams Tier**
+  - $19 per user, per month
   - Enhanced AI-assisted code completion
-  - Team and enterprise features
-  - Full access to all platforms and integrations
+  - Pre-pull request review inside the IDE
+  - Standard support
+- **Enterprise Tier**
+  - Custom pricing
+  - Self-hosted solution
+  - Full organization codebase awareness
+  - Enterprise SSO
+  - Priority support
 
 ## Conclusion
 
 Sourcegraph Cody and Qodo Gen both offer robust AI-powered development assistance, but they cater to slightly different needs. Sourcegraph Cody stands out with its extensive context awareness and enterprise-focused features, making it particularly suitable for large organizations with complex codebases and multiple repositories. Its strength lies in its deep integration with existing development workflows and advanced context handling capabilities.
 
-Qodo Gen, on the other hand, excels in its focused approach to test generation and pull request reviews, with strong support for multiple programming languages and platforms. Its more straightforward pricing structure and emphasis on individual developer features make it an attractive option for smaller teams and independent developers. The choice between the two will largely depend on your specific needs regarding repository access, team size, and the importance of test generation capabilities in your workflow.
+Qodo Gen, on the other hand, excels in its focused approach to test generation and pull request reviews, with strong support for multiple programming languages and platforms. Its emphasis on individual developer features make it an attractive option for smaller teams and independent developers. 
+
+Ultimately, the choice between the two will largely depend on your specific needs regarding repository access, team size, and the importance of test generation capabilities in your workflow.
