--- a/copilot/comparing-copilot-vs-tabnine.mdx
+++ b/copilot/comparing-copilot-vs-tabnine.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of GitHub Copilot and Tabnine, examining t
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, GitHub Copilot and Tabnine stand out as two prominent solutions in the market. Both tools offer robust AI-powered code completion capabilities, but they differ significantly in their approach to privacy and deployment options. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [GitHub Copilot](https://github.com/features/copilot) and [Tabnine](https://www.tabnine.com/) stand out as two prominent solutions in the market. Both tools offer robust AI code completion capabilities, but they differ significantly in their approach to privacy and deployment options. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,13 +31,13 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✓'],
     ['Models Supported', 'GPT-4, Custom Models', 'Universal and Custom Models'],
-    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free tier + Enterprise $39/mo]
+    ['Pricing', 'Free + Team $4/user/mo + Enterprise $21/user/mo', 'Dev $9/mo + Enterprise $30/user/mo]
 ]
 
 ## Code Completion
 
 ### GitHub Copilot
-GitHub Copilot provides real-time code suggestions powered by OpenAI's technology. It excels at offering whole-line and full-function completions across multiple programming languages. The tool's ability to convert comments into functional code and provide context-aware suggestions based on your entire codebase makes it particularly powerful for complex development tasks.
+GitHub Copilot provides real-time code suggestions powered by OpenAI's technology. It excels at offering whole-line and full-function code generation across multiple programming languages. The tool's ability to convert comments into functional code, and provide context-aware suggestions based on your entire codebase, makes it particularly powerful for complex development tasks.
 
 ### Tabnine
 Tabnine offers AI-powered code completion with a strong emphasis on personalization. It learns from your coding patterns and provides whole-line suggestions and full-function implementations. The tool stands out with its ability to adapt to individual coding styles and offer partial completion acceptance, allowing developers more granular control over suggestions.
@@ -51,7 +53,7 @@ Tabnine's chat functionality focuses on code-aware conversations within the IDE.
 ## Context Awareness
 
 ### GitHub Copilot
-GitHub Copilot demonstrates strong context awareness by analyzing your entire codebase, open files, and recent coding patterns. It uses this information to provide more accurate and relevant suggestions, particularly effective in large projects with complex dependencies.
+GitHub Copilot demonstrates strong context awareness by analyzing your entire codebase, open files, and recent coding patterns. It uses this information to provide more accurate and relevant suggestions, which can be particularly effective in large projects with complex dependencies.
 
 ### Tabnine
 Tabnine's context awareness is built around its learning capabilities from your codebase and team-wide code patterns. It offers project-specific suggestions and custom fine-tuning capabilities, with a particular emphasis on maintaining privacy during this process.
@@ -59,7 +61,7 @@ Tabnine's context awareness is built around its learning capabilities from your 
 ## Privacy and Security
 
 ### GitHub Copilot
-GitHub Copilot processes code suggestions locally and complies with GitHub's privacy policy. It offers options to disable telemetry and implements enterprise-grade security measures. However, it doesn't provide self-hosting options, which might be a concern for some organizations.
+GitHub Copilot processes code suggestions locally and complies with GitHub's privacy policy. It offers options to disable telemetry, and implements enterprise-grade security measures. However, it doesn't provide self-hosting options, which might be a concern for some organizations.
 
 ### Tabnine
 Tabnine places a heavy emphasis on privacy and security, offering end-to-end encryption and no third-party code sharing. It distinguishes itself by providing self-hosted deployment options for enterprises, giving organizations complete control over their data and infrastructure.
@@ -67,19 +69,41 @@ Tabnine places a heavy emphasis on privacy and security, offering end-to-end enc
 ## Pricing
 
 ### GitHub Copilot
-- **Individual**: $10/month or $100/year
-- **Business**: $19/user/month
-- **Enterprise**: Custom pricing
-- **Education**: Free for verified students and teachers
+- **Free Plan**
+  - Free for individual users
+  - Unlimited public/private repositories
+  - Automatic security and version updates
+  - 2000 CI/CD minutes per month
+  - 500MB of Packages storage
+- **Team Plan**
+  - $4 per user, per month
+  - Access to GitHub Codespaces 
+  - Protected branches
+  - 3000 CI/CD minutes per month
+  - 2GB of Packages storage
+- **Enterprise Plan**
+  - $21 per user, per month
+  - Data residency 
+  - Enterprise managed users
+  - 50,000 CI/CD minutes per month
+  - 50GB of Packages storage
 
 ### Tabnine
-- **Basic Plan**: Free tier with essential features
-- **Pro Plan**: $12/month for individual developers
-- **Team Plan**: Custom pricing based on team size
-- **Enterprise Plan**: Custom pricing with self-hosting options
+- **Dev Plan**
+  - $9 per month
+  - AI agents personalized to your coding standards
+  - Integration with Atlassian Jira
+  - Enterprise-grade security, safety, and privacy
+- **Enterprise Plans**
+  - $39 per user, per month
+  - SaaS and Private Installation options
+  - Full control over infrastructure
+  - Maximum security features
 
 ## Conclusion
 
 GitHub Copilot and Tabnine both offer powerful AI-assisted development capabilities, but they serve slightly different needs. GitHub Copilot, backed by OpenAI's technology, provides a more comprehensive solution with broader platform support and advanced chat capabilities, making it ideal for developers who want a full-featured AI pair programmer with seamless GitHub integration.
 
-Tabnine, on the other hand, distinguishes itself with its strong focus on privacy, self-hosting options, and personalization capabilities. It's particularly appealing to enterprises and organizations with strict security requirements or those who need complete control over their development infrastructure. The choice between the two will largely depend on your specific needs regarding privacy, deployment options, and the level of AI assistance required in your development workflow.
+Tabnine, on the other hand, distinguishes itself with its strong focus on privacy, self-hosting options, and personalization capabilities. It's particularly appealing to enterprises and organizations with strict security requirements or those who need complete control over their development infrastructure. 
+
+Ultimately, the choice between the two will largely depend on your specific needs regarding privacy, deployment options, and the level of AI assistance required in your development workflow.
