--- a/cody/comparing-cody-vs-tabnine.mdx
+++ b/cody/comparing-cody-vs-tabnine.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Comprehensive comparison of Sourcegraph Cody and Tabnine, anal
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Sourcegraph Cody and Tabnine stand out as two prominent solutions in the market. Both tools offer sophisticated code completion and AI assistance, but they differ significantly in their approach to context handling and deployment options. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/) and [Tabnine](https://www.tabnine.com/) stand out as two prominent solutions in the market. Both tools offer sophisticated code generation and AI assistance, but they differ significantly in their approach to context handling and deployment options. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,13 +31,13 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✗', '✓'],
     ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
-    ['Pricing', 'Free tier + Pro $9/mo', 'Free tier + Enterprise $39/mo']
+    ['Pricing', 'Free + Pro $9/mo + Enterprise $19/user/mo', 'Dev $9/mo + Enterprise $30/user/mo']
 ]
 
 ## Code Completion
 
 ### Sourcegraph Cody
-Cody offers intelligent code completion with deep codebase understanding, leveraging multiple context retrieval methods including Keyword Search and Code Graph analysis. It provides context-aware suggestions that maintain consistent coding patterns and supports automatic code completion across multiple programming languages.
+Cody offers intelligent code completion with deep codebase understanding, leveraging multiple context retrieval methods including Keyword Search and Code Graph analysis. It provides context-aware suggestions that maintain consistent coding patterns, and supports automatic code completion across multiple programming languages.
 
 ### Tabnine
 Tabnine excels with its whole-line and full-function suggestions, offering adaptive completions that learn from your coding style. It features unique comment-to-code capabilities and partial completion acceptance, allowing developers to accept suggestions line-by-line or word-by-word.
@@ -51,7 +53,7 @@ Tabnine Chat offers code-aware conversations directly integrated into the IDE, f
 ## Context Awareness
 
 ### Sourcegraph Cody
-Cody employs sophisticated context management with configurable window sizes and multiple retrieval methods. It offers enterprise-grade context features including remote file/directory access and OpenCtx capabilities, making it particularly strong for large codebases.
+Cody employs sophisticated context management with configurable window sizes and multiple retrieval methods. It offers enterprise-grade context features, including remote file/directory access and OpenCtx capabilities, making it particularly strong for large codebases.
 
 ### Tabnine
 Tabnine focuses on personalized context awareness, learning from your coding patterns and project-specific requirements. It adapts to individual and team-wide code patterns, offering contextual suggestions based on your current project scope.
@@ -67,26 +69,31 @@ Tabnine places a strong emphasis on privacy with end-to-end encryption, no third
 ## Pricing
 
 ### Sourcegraph Cody
-- **Free/Pro Tier**
+- **Free Tier**
+  - Free for individual users
   - Single repository access
   - Basic IDE integration
   - Essential code completion
+- **Pro Tier**
+  - $9 per month
+  - Unlimited chat and commands
+  - More powerful LLMs for chat
+  - Support with limited SLAs
 - **Enterprise Tier**
+  - $19 per user, per month
   - Multi-repository support
   - Enhanced features across all IDEs
   - Team collaboration capabilities
   - Custom deployment options
 
 ### Tabnine
-- **Basic Plan**
-  - Free tier with essential features
-  - Public code completion
 - **Dev Plan**
-  - Enhanced features for individual developers
-- **Pro Plan**
-  - Advanced customization
-  - Priority support
+  - $9 per month
+  - AI agents personalized to your coding standards
+  - Integration with Atlassian Jira
+  - Enterprise-grade security, safety, and privacy
 - **Enterprise Plans**
+  - $39 per user, per month
   - SaaS and Private Installation options
   - Full control over infrastructure
   - Maximum security features
@@ -95,4 +102,6 @@ Tabnine places a strong emphasis on privacy with end-to-end encryption, no third
 
 Sourcegraph Cody and Tabnine each bring unique strengths to AI-powered development assistance. Cody excels in its comprehensive codebase understanding and enterprise-focused features, making it particularly suitable for large teams working across multiple repositories. Its strong context awareness and integration capabilities make it a powerful tool for complex development environments.
 
-Tabnine, on the other hand, stands out with its emphasis on privacy and security, along with highly personalized code completion features. Its adaptive learning capabilities and flexible deployment options make it an excellent choice for both individual developers and security-conscious organizations. The choice between the two largely depends on your specific needs regarding privacy, scale of operations, and desired level of context awareness.
+Tabnine, on the other hand, stands out with its emphasis on privacy and security, along with highly personalized code completion features. Its adaptive learning capabilities and flexible deployment options make it an excellent choice for both individual developers and security-conscious organizations. 
+
+Ultimately, the choice between the two may largely depend on your specific needs regarding privacy, scale of operations, and desired level of context awareness.
